Editors are laid out correctly again

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,3 +3,12 @@
 @tailwind utilities;
 
 
+@layer base {
+    body {
+        @apply bg-stone-200;
+    }
+    #rpc-container label
+	{
+		@apply inline-block mb-0.5 mt-1 ml-1;
+	}
+}
