--- a/src/src/index.css
+++ b/src/src/index.css
@@ -3,37 +3,6 @@
 @tailwind utilities;
 @tailwind variants;
 
-
-.hideSpinner {
-	-moz-appearance: textfield;
-}
-.hideSpinner::-webkit-inner-spin-button,
-.hideSpinner::-webkit-outer-spin-button {
-
-    -webkit-appearance: none;
-}
-
-.ProseMirror
-{
-	position: static !important
-}
-
-.narrowScrollbar {
-	scrollbar-width: thin;
-}
-.narrowScrollbar::-webkit-scrollbar {
-	width: 10px;
-}
-.narrowScrollbar::-webkit-scrollbar-track {
-	background: white;
-}
-.narrowScrollbar::-webkit-scrollbar-thumb {
-	background-color: auto;
-	border-radius: 100%;
-}
-
-
-
 @layer base
 {
 	body {
@@ -42,6 +11,9 @@
 	input, textarea, select {
 		@apply read-only:bg-gray-50 read-only:text-gray-500;
 	}
+
+
+
 }
 
 @layer components
@@ -49,6 +21,11 @@
 	.has-error input, .has-error textarea, .has-error select, .react-select-error
 	{
 		@apply bg-red-50;
+	}
+	#rpc-container label
+	{
+		@apply inline-block mb-2;
+		color: red !important;
 	}
 }
 
